--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 authors = ["Louis Sven Goulet"]
 repository = "https://github.com/lorlouis/rfc9839-rs"
 license = "MIT OR Apache-2.0"
-keywords = ["unicode", "rfc9839", "bad unicode", "nostd"]
+keywords = ["unicode", "rfc9839", "nostd"]
 description = "A rust implementation of RFC9839 to test for problematic Unicode code points"
 
 [dependencies]
