--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "rfc9839-rs"
-version = "0.0.2"
+version = "0.0.3"
 edition = "2024"
 authors = ["Louis Sven Goulet"]
 repository = "https://github.com/lorlouis/rfc9839-rs"
 license = "MIT OR Apache-2.0"
-keywords = ["unicode", "rfc9839", "nostd"]
+keywords = ["unicode", "rfc9839", "nostd", "xml", "validation"]
 description = "A rust implementation of RFC9839 to test for problematic Unicode code points"
 readme = "README.md"
+categories = ["text-processing"]
 
 [dependencies]
